--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
     "predeploy": "yarn build",
-     "deploy": "gh-pages -d build"A
+    "deploy": "gh-pages -d build",
     "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.5.0",
     "json-server": "^0.17.0",
