--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "./src/index.tsx",
   "scripts": {
     "start": "webpack serve --open",
-    "build": "webpack",
-    "lint": "eslint ./src",
-    "lint:fix": "eslint ./src --fix"
+    "build": "webpack --mode=production",
+    "lint": "eslint src",
+    "lint:fix": "eslint src/**/*.tsx --fix",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -17,12 +19,12 @@
     "react",
     "typescript"
   ],
-  "author": "AI-MIRROR TEAM (seenivasan.balakrishnan@gmail.com)",
+  "author": "AI-MIRROR TEAM (seenivasan.balakrishnan@csscorp.com)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/SeenivasanBalakrishnan/ai-mirror-react-poc/issues"
   },
-  "homepage": "https://github.com/SeenivasanBalakrishnan/ai-mirror-react-poc#readme",
+  "homepage": "https://seenivasanbalakrishnan.github.io/ai-mirror-react-poc/",
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/eslint-parser": "^7.16.3",
@@ -46,6 +48,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "json-server": "^0.17.0",
     "json-server-auth": "^2.1.0",
