--- a/.github/workflows/deloy-to-dev-server.yml
+++ b/.github/workflows/deloy-to-dev-server.yml
@@ -14,15 +14,13 @@ jobs:
 
       steps:
         - name: Checkout
-          uses: actions/checkout@master
+          uses: actions/checkout@v2
 
-        - uses: borales/actions-yarn@v2.0.0
-          with:
-            cmd: install
+        - name: Install Dependency
+          run: yarn
 
-        - uses: borales/actions-yarn@v2.0.0
-          with:
-            cmd: build
+        - name: Build
+          run: yarn build
             
-        - name: deploy
+        - name: Deploy
           run: yarn run deploy
