--- a/.github/workflows/deloy-to-dev-server.yml
+++ b/.github/workflows/deloy-to-dev-server.yml
@@ -15,6 +15,9 @@ jobs:
       steps:
         - name: Checkout
           uses: actions/checkout@v2
+          
+        - name: User Login  
+          uses: fregante/setup-git-user@v1
 
         - name: Install Dependency
           run: yarn
