--- a/.github/workflows/deloy-to-dev-server.yml
+++ b/.github/workflows/deloy-to-dev-server.yml
@@ -18,8 +18,8 @@ jobs:
           
         - name: User Login  
           run: |
-            git config --global user.name "$(git --no-pager log --format=format:'%an' -n 1)"
-            git config --global user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
+            git config --global user.name "SeenivasanBalakrishnan"
+            git config --global user.email "seenivasan.balakrishnan@csscorp.com"
             
         - name: Install Dependency
           run: yarn
