--- a/.github/workflows/deloy-to-dev-server.yml
+++ b/.github/workflows/deloy-to-dev-server.yml
@@ -7,24 +7,20 @@ on:
     branches: [ develop, main ]
 
 jobs:
-    build:
-      name: Build
+  build-and-deploy:
+    concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2
 
-      runs-on: ubuntu-latest
+      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+        run: |
+          npm ci
+          npm run build
 
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v2
-          
-        - name: Install Dependency
-          run: yarn
-
-        - name: Build
-          run: yarn build
-            
-        - name: Deploy
-          run: | 
-            git config --global user.name "SeenivasanBalakrishnan"
-            git config --global user.email "seenivasan.balakrishnan@csscorp.com"
-            git config --global credential.helper wincred
-            yarn run deploy
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4.2.3
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: build # The folder the action should deploy.
