--- a/.github/workflows/deloy-to-dev-server.yml
+++ b/.github/workflows/deloy-to-dev-server.yml
@@ -1,4 +1,4 @@
-name: CI - Deploy to dev-server
+name: CI - Deploy To Host
 
 on:
   push:
@@ -26,6 +26,6 @@ jobs:
           if: ${{ github.event_name == 'push' }}
           uses: JamesIves/github-pages-deploy-action@v4.2.3
           with:
-            branch: server # The branch the action should deploy to.
+            branch: host # The branch the action should deploy to.
             folder: build # The folder the action should deploy.
             target-folder: dev # The deploy the files to dev folder
