--- a/.github/workflows/deloy-to-dev-server.yml
+++ b/.github/workflows/deloy-to-dev-server.yml
@@ -20,10 +20,13 @@ jobs:
         - name: Build
           run: yarn build
           
-        - name: Deploy
+        - name: Checks Deployment
           if: ${{ github.event_name == 'push' }}
           uses: JamesIves/github-pages-deploy-action@v4.2.3
           with:
             branch: host # The branch the action should deploy to.
             folder: build # The folder the action should deploy.
             target-folder: dev # The deploy the files to dev folder
+
+        - name: Done
+          run: echo 'Hooray!';
