--- a/.github/workflows/deloy-to-dev-server.yml
+++ b/.github/workflows/deloy-to-dev-server.yml
@@ -18,17 +18,17 @@ jobs:
 
         - name: Build
           run: yarn build
-          
-        - name: Checks Deployment
-          if: ${{ github.event_name == 'push' }}
+
+        - if: ${{ github.event_name == 'push' }}
+          name: Checks Deployment
           uses: JamesIves/github-pages-deploy-action@v4.2.3
           with:
             branch: host # The branch the action should deploy to.
             folder: build # The folder the action should deploy.
             target-folder: dev # The deploy the files to dev folder
+            
+        - if: ${{ github.event_name == 'pull_request' }}
+          run: echo 'Hooray...! Build is done!';
 
-        - name: Done
-        -  if: ${{ github.event_name == 'pull_request' }}
-           run: echo 'Hooray...! Build is done!';
-        -  if: ${{ github.event_name == 'push' }}
-           run: echo 'Hooray...! Deployment is done!';
+        - if: ${{ github.event_name == 'push' }}
+          run: echo 'Hooray...! Deployment is done!';
