--- a/.github/workflows/deloy-to-dev-server.yml
+++ b/.github/workflows/deloy-to-dev-server.yml
@@ -7,18 +7,24 @@ on:
     branches: [ development ]
 
 jobs:
-    build:
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v2
-          
-        - name: Install Dependency
-          run: yarn
+  
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-        - name: Build
-          run: yarn build
+      - name: Install Dependency
+        run: yarn
 
+      - name: Build
+        run:
+          yarn build
+          echo 'Hooray...! Build is done!'
+        
+  Deploy:
+    runs-on: ubuntu-latest
+    steps:
         - if: ${{ github.event_name == 'push' }}
           name: Checks Deployment
           uses: JamesIves/github-pages-deploy-action@v4.2.3
@@ -27,8 +33,5 @@ jobs:
             folder: build # The folder the action should deploy.
             target-folder: dev # The deploy the files to dev folder
             
-        - if: ${{ github.event_name == 'pull_request' }}
-          run: echo 'Hooray...! Build is done!';
-
         - if: ${{ github.event_name == 'push' }}
-          run: echo 'Hooray...! Deployment is done!';
+          run: echo 'Hooray...! Deploy is done!';
