--- a/.github/workflows/deloy-to-dev-server.yml
+++ b/.github/workflows/deloy-to-dev-server.yml
@@ -25,7 +25,7 @@ jobs:
     Deploy:
       needs: Build
       runs-on: ubuntu-latest
-      if: ${{ Build.init.outputs.skip == 'false' }} && ${{ github.event_name == 'push' }}
+      if: Build.init.outputs.skip == 'false' && ${{ github.event_name == 'push' }}
       steps:
         - name: Deploy
           if: ${{ github.event_name == 'push' }}
