--- a/.github/workflows/deloy-to-dev-server.yml
+++ b/.github/workflows/deloy-to-dev-server.yml
@@ -7,7 +7,7 @@ on:
     branches: [ development ]
 
 jobs:
-    Build:
+    Build_And_Deploy:
       runs-on: ubuntu-latest
       steps:
         - name: Checkout
@@ -19,21 +19,17 @@ jobs:
         - name: Build
           run: yarn build
           
-        - if: ${{ github.event_name == 'pull_request' }}
-          run: echo 'Hooray...! Build is done!';
-
-    Deploy:
-      needs: Build
-      runs-on: ubuntu-latest
-      if: Build.init.outputs.skip == 'false' && ${{ github.event_name == 'push' }}
-      steps:
-        - name: Deploy
+        - name: Checks Deployment
           if: ${{ github.event_name == 'push' }}
           uses: JamesIves/github-pages-deploy-action@v4.2.3
           with:
             branch: host # The branch the action should deploy to.
             folder: build # The folder the action should deploy.
             target-folder: dev # The deploy the files to dev folder
-            
-        - if: ${{ github.event_name == 'push' }}
-          run: echo 'Hooray...! Deployment is done!';
+
+        - name: Done
+          run: |
+            if: ${{ github.event_name == 'pull_request' }} 
+            echo 'Hooray...! Build is done!';
+            if: ${{ github.event_name == 'push' }}
+            echo 'Hooray...! Deployment is done!';
