--- a/.github/workflows/deloy-to-dev-server.yml
+++ b/.github/workflows/deloy-to-dev-server.yml
@@ -7,7 +7,7 @@ on:
     branches: [ development ]
 
 jobs:
-    build:
+    Build_And_Deploy:
       runs-on: ubuntu-latest
       steps:
         - name: Checkout
