--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack serve --open",
     "build": "webpack --mode=production",
     "lint": "eslint src",
-    "lint:fix": "eslint src/**/*.tsx --fix",
+    "lint:fix": "eslint src/**/*.tsx --fix"
   },
   "repository": {
     "type": "git",
