--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "start": "webpack serve --open",
     "build": "webpack --mode=production",
     "lint": "eslint src",
-    "lint:fix": "eslint src/**/*.tsx --fix",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "lint:fix": "eslint src/**/*.tsx --fix"
   },
   "repository": {
     "type": "git",
@@ -48,7 +46,6 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "json-server": "^0.17.0",
     "json-server-auth": "^2.1.0",
