--- a/.babelrc
+++ b/.babelrc
@@ -9,9 +9,10 @@
     [
       "module-resolver",
       {
-        "root": ["."],
-        "alias": {
-        }
+        "root": [
+          "."
+        ],
+        "alias": {}
       }
     ]
   ]
