--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,21 @@
       "*": [
         "src/*"
       ],
+      "configuration/*": [
+        "./src/configuration/*"
+      ],
+      "components/*": [
+        "src/components/*"
+      ],
+      "forms/*": [
+        "src/forms/*"
+      ],
+      "mock-data/*": [
+        "src/mock-data/*"
+      ],
+      "types/*": [
+        "src/types/*"
+      ]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
