--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "mobx": "^6.4.2",
+    "mobx-react-lite": "^3.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "6"
