--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,16 +34,25 @@
         "src/*"
       ],
       "configuration/*": [
-        "./src/configuration/*"
+        "src/configuration/*"
       ],
       "components/*": [
         "src/components/*"
+      ],
+      "contexts/*": [
+        "src/contexts/*"
       ],
       "forms/*": [
         "src/forms/*"
       ],
       "mock-data/*": [
         "src/mock-data/*"
+      ],
+      "services/*": [
+        "src/services/*"
+      ],
+      "stores/*": [
+        "src/stores/*"
       ],
       "types/*": [
         "src/types/*"
