Push to Live (#49)
* create the PR link after the code push is done (#24)

* Added the functionality to the creating PR link after the code push using yarn scripts

* Reusable product component implemented

* Reusable product component implemented (#26)

* Reusable product component has been implemented with some mock data

* Reusable product component has been implemented with some mock data (#28)

A reusable product component has been implemented with some mock data

* Product list component unit test fix

* Product list component unit test fix

* Product list component unit test fix

* Product list component unit test bug fix (#30)

* Reusable product component has been implemented with some mock data

* Modified the  product component as reusable to provide the product based on the passing props

* 'Responsive

* Responsive styles updated for the reusable product component

* Responsive styles updated for the reusable product component

* Responsive styles updated for two reusable product components

* commiting inital part

* Order confirmation page (Static)

* Responsive styled reusable products done

* Unit test fix in reusable product components

* Reusable form and input components implemented and login and register forms created

* Absolute path mapping done in babelrc and tsconfig file

* Mobile view Hamburger menu implemented

* nav-bar issue fixed in header component

* Checkout static page completed

* Form data updated in login and register page

* Header and Footer

* User store and services created for login form using MobX

* swagger file for api

* Update swagger-click-and-buy.yml

* User register and login modules completed with proper API requests, loader and error handling

* Implemented the cart overlay page with static contents

* Update README.md

Signed-off-by: Seenivasan Balakrishan <seenivasan.balakrishnan@csscorp.com>
Co-authored-by: SeenivasanBalakrishnan <94740032+See

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,30 @@
       "*": [
         "src/*"
       ],
+      "configuration/*": [
+        "src/configuration/*"
+      ],
+      "components/*": [
+        "src/components/*"
+      ],
+      "contexts/*": [
+        "src/contexts/*"
+      ],
+      "forms/*": [
+        "src/forms/*"
+      ],
+      "mock-data/*": [
+        "src/mock-data/*"
+      ],
+      "services/*": [
+        "src/services/*"
+      ],
+      "stores/*": [
+        "src/stores/*"
+      ],
+      "types/*": [
+        "src/types/*"
+      ]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
