--- a/.babelrc
+++ b/.babelrc
@@ -9,8 +9,18 @@
     [
       "module-resolver",
       {
-        "root": ["."],
+        "root": [
+          "."
+        ],
         "alias": {
+          "configuration": "./src/configuration",
+          "components": "./src/components",
+          "contexts": "./src/contexts",
+          "forms": "./src/forms",
+          "mock-data": "./src/mock-data",
+          "services": "./src/services",
+          "stores": "./src/stores",
+          "types": "./src/types"
         }
       }
     ]
