--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "postcss-loader": "^6.2.1",
     "postcss-nesting": "^10.1.2",
     "prettier": "2.5.1",
+    "react-hook-form": "^7.27.1",
     "sass": "^1.44.0",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
@@ -71,9 +72,10 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
-    "formik": "^2.2.9",
+    "mobx": "^6.4.2",
+    "mobx-react-lite": "^3.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "6"
+    "react-router-dom": "^6.2.2"
   }
 }
